2010-11-11  Nate Chapin  <japhet@chromium.org>

Reviewed by Antti Koivisto.

        Test update for https://bugs.webkit.org/show_bug.cgi?id=49351,
        the timing of willSendRequest() calls will be slightly different.

        * platform/mac/security/block-test-expected.txt:
2010-11-11  Nate Chapin  <japhet@chromium.org>

        Reviewed by Antti Koivisto.

        Cleanup after http://trac.webkit.org/changeset/71562, namely:
        Make deferred request handle simpler.
        Don't perform callbacks associated with network load starting
        (e.g., willSendRequest) until the load is in fact sent to the network.
        Make ResourceLoadScheduler a friend of ResourceLoader and make
        ResourceLoader::start() protected to try to ensure loads actually
        go through the scheduler.
        https://bugs.webkit.org/show_bug.cgi?id=49351

        Behavior should be covered by existing tests.

        * loader/NetscapePlugInStreamLoader.cpp:
        (WebCore::NetscapePlugInStreamLoader::create):
        * loader/ResourceLoadScheduler.cpp:
        (WebCore::ResourceLoadScheduler::servePendingRequests):
        * loader/ResourceLoadScheduler.h:
        (WebCore::ResourceLoadScheduler::HostInformation::limitRequests):
        * loader/ResourceLoader.cpp:
        (WebCore::ResourceLoader::init):
        (WebCore::ResourceLoader::start):
        (WebCore::ResourceLoader::setDefersLoading):
        (WebCore::ResourceLoader::didCancel):
        * loader/ResourceLoader.h:
        (WebCore::ResourceLoader::reachedTerminalState):
        (WebCore::ResourceLoader::request):
        * loader/SubresourceLoader.cpp:
        (WebCore::SubresourceLoader::create):
        * loader/loader.cpp:
        (WebCore::Loader::load):
        (WebCore::Loader::willSendRequest):
        * loader/loader.h:

Canonical link: https://commits.webkit.org/62360@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@71884 268f45cc-cd09-0410-ab3c-d52691b4dbfc