WebCore/loader/ResourceLoader.cpp
@@ -110,9 +110,10 @@ void ResourceLoader::releaseResources()
     m_deferredRequest = ResourceRequest();
 }
 
-bool ResourceLoader::load(const ResourceRequest& r)
+void ResourceLoader::init(const ResourceRequest& r)
 {
     ASSERT(!m_handle);
+    ASSERT(m_request.isNull());
     ASSERT(m_deferredRequest.isNull());
     ASSERT(!m_documentLoader->isSubstituteLoadPending(this));
     
@@ -128,39 +129,36 @@ bool ResourceLoader::load(const ResourceRequest& r)
             clientRequest.setFirstPartyForCookies(document->firstPartyForCookies());
     }
 
-    willSendRequest(clientRequest, ResourceResponse());
-    if (clientRequest.isNull()) {
-        didFail(frameLoader()->cancelledError(r));
-        return false;
-    }
-
-    if (m_defersLoading)
-        m_deferredRequest = clientRequest;
-
-    return true;
+    m_request = clientRequest;
 }
 
-bool ResourceLoader::start()
+void ResourceLoader::start()
 {
     ASSERT(!m_handle);
-#ifndef NDEBUG
-    resourceLoadScheduler()->assertLoaderBeingCounted(this);
-#endif
+    ASSERT(!m_request.isNull());
+    ASSERT(m_deferredRequest.isNull());
+
+    willSendRequest(m_request, ResourceResponse());
+    if (m_request.isNull()) {
+        didFail(frameLoader()->cancelledError(m_request));
+        return;
+    }    
     
     if (m_documentLoader->scheduleArchiveLoad(this, m_request, m_request.url()))
-        return true;
+        return;
     
 #if ENABLE(OFFLINE_WEB_APPLICATIONS)
     if (m_documentLoader->applicationCacheHost()->maybeLoadResource(this, m_request, m_request.url()))
-        return true;
+        return;
 #endif
 
-    if (m_defersLoading)
-        return false;
+    if (m_defersLoading) {
+        m_deferredRequest = m_request;
+        return;
+    }
 
     if (!m_reachedTerminalState)
         m_handle = ResourceHandle::create(m_frame->loader()->networkingContext(), m_request, this, m_defersLoading, m_shouldContentSniff);
-    return true;
 }
 
 void ResourceLoader::setDefersLoading(bool defers)
@@ -169,9 +167,9 @@ void ResourceLoader::setDefersLoading(bool defers)
     if (m_handle)
         m_handle->setDefersLoading(defers);
     if (!defers && !m_deferredRequest.isNull()) {
-        ResourceRequest request(m_deferredRequest);
+        m_request = m_deferredRequest;
         m_deferredRequest = ResourceRequest();
-        load(request);
+        start();
     }
 }
 
@@ -359,7 +357,7 @@ void ResourceLoader::didCancel(const ResourceError& error)
         m_handle->cancel();
         m_handle = 0;
     }
-    if (m_sendResourceLoadCallbacks && !m_calledDidFinishLoad)
+    if (m_sendResourceLoadCallbacks && m_identifier && !m_calledDidFinishLoad)
         frameLoader()->notifier()->didFailToLoad(this, error);
 
     releaseResources();
