WebCore/loader/loader.h
@@ -43,6 +43,7 @@ namespace WebCore {
         void cancelRequests(CachedResourceLoader*);
 
     private:
+        virtual void willSendRequest(SubresourceLoader*, ResourceRequest&, const ResourceResponse&);
         virtual void didReceiveResponse(SubresourceLoader*, const ResourceResponse&);
         virtual void didReceiveData(SubresourceLoader*, const char*, int);
         virtual void didReceiveCachedMetadata(SubresourceLoader*, const char*, int);
